# scene-editor

./: Cargo.toml  LICENSE  README.md
shaders/: default.frag  default_frag.glsl  default_vert.glsl  deferred_pass_frag.glsl  deferred_pass_vert.glsl  depth_vert.glsl  geometry_pass_frag.glsl  geometry_pass_vert.glsl  outline.vert  outline_frag.glsl  simple.frag  simple.vert
src/: commands.rs  components.rs  debug.rs  game_logic.rs  gl_systems.rs  gl_util.rs  lib.rs  main.rs  renderer.rs  resources.rs  shader.rs  state.rs  systems.rs  ui.rs  vao.rs
