[package]
name = "scene-editor"
version = "0.1.0"
edition = "2024"

[features]
clipboard = ["egui_glow/clipboard"]

[dependencies]
ahash = "0.8.3"
bevy_ecs = "0.10"
bytemuck = "1.13"
color-eyre = "0.6"
egui = "0.21"
egui_glow = { version = "0.21", features = ["winit"] }
glow = "0.12"
glutin = "0.30"
glutin-winit = "0.3"
nalgebra-glm = { version = "0.18", features = ["convert-bytemuck"] }
raw-window-handle = "0.5"
tobj = "3.2"
tracing = "0.1"
tracing-subscriber = "0.3"
winit = "0.28"
zune-png = "0.2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
